latest changes upto 15-2020

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,5 +1,22 @@
-<div class="map-container">
+<!-- <div class="row">
+  <div class="map-container col-lg-2">
+    <div><p>sachin</p></div>
+  </div>
+  <div class="map-container col-lg-10">
     <div class="map-frame">
       <div id="map"></div>
     </div>
   </div>
+</div> -->
+<div class=" cont-pad">
+  <div class="row">
+      <div class="col-md-2">
+          <button >Layer</button>
+      </div>
+      <div class="map-container col-lg-10">
+        <div class="map-frame">
+          <div id="map"></div>
+        </div>
+      </div>
+  </div>
+</div>
